test/TestPhases/exportinference/invalid/enum.blc
module exposes Color

typealias T = int32

const two: T = 2 : T

enum Color : T
    Red = 1
    Blue = two : T default
extension // Thats bad because internal structure and methods are either hidden or exposed together 
    function Init () returns Color
        return Red
    end
end

const RED: Color = Red
